2000-08-21  Dave Love  <fx@gnu.org>

	* nnimap.el (nnimap-request-newgroups): Eschew member-if.

2000-08-21 10:09:47  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-topic.el (gnus-topic-hide-topic): Use find-topology if
	permanent is used.
	(gnus-topic-show-topic): Read topic when to show permanent hidden
	topic.
	(gnus-topic-remove-topic): Revert to the old behavior, not using
	hide.

2000-08-21  Dave Love  <fx@gnu.org>

	* gnus-ems.el (gnus-add-minor-mode): Add &rest arg.
	(gnus-xemacs): Use featurep.

	* mm-util.el (mm-read-charset): Maybe use builtin.
	(mm-replace-chars-in-string): Maybe use subst-char-in-string.
	(mm-multibyte-p, mm-with-unibyte-current-buffer)
	(mm-with-unibyte): Use featurep, not string-match.
	(mm-with-unibyte-buffer): Simplify.
	(mm-quote-arg): Maybe use shell-quote-argument.

	* mml.el (mml-make-string): Deleted (unused).

	* gnus.el (gnus-mode-line-buffer-identification): Supply
	definition for Emacs 21.

	* gnus-salt.el: Small doc fixes.
	(gnus-pick-mode, gnus-binary-mode): Supply a toggle-func arg to
	gnus-add-minor-mode.

	* gnus-topic.el (gnus-topic-mode): Supply a toggle-func arg to
	gnus-add-minor-mode.

2000-08-20  Simon Josefsson  <simon@josefsson.org>

	* nnimap.el (nnimap-before-find-minmax-bugworkaround): New
	function, thanks to Lloyd Zusman for debugging.
	(nnimap-request-group): 
	(nnimap-request-list): 
	(nnimap-retrieve-groups): 
	(nnimap-request-newgroups): Use it.

	* nnimap.el (nnimap-request-article-part): Less verbose.

2000-08-19  Andreas Jaeger  <aj@suse.de>

	* lpath.el ((string-match "XEmacs" emacs-version)): Remove
	subst-char-in-string since we test elsewhere whether it's bound.
	
2000-08-18  Dave Love  <fx@gnu.org>

	* gnus-score.el (gnus-score-find-score-files-function): Fix doc,
	custom type.

	* gnus-xmas.el (gnus-group-icon-create-glyph): Don't test
	gnus-group-running-xemacs.

	* nnheader.el (nnheader-replace-chars-in-string): Use
	subst-char-in-string if available.
