@@ -1,3 +1,7 @@
+2000-08-23  Dave Love  <fx@gnu.org>
+
+	* dgnushack.el: Remove `member-if' compiler macro.
+
 2000-08-21  Dave Love  <fx@gnu.org>
 
 	* nnimap.el (nnimap-request-newgroups): Eschew member-if.
